--- a/src/app/test/page3/page3.component.html
+++ b/src/app/test/page3/page3.component.html
@@ -1,1 +1,10 @@
-<p>page3 works!</p>
+<a routerLink="/page2">
+    <div id="left-section" class="col">
+        <svg class="bi bi-box-arrow-left" width="3em" height="3em" viewBox="0 0 20 20" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+                d="M6.354 13.354a.5.5 0 000-.708L3.707 10l2.647-2.646a.5.5 0 10-.708-.708l-3 3a.5.5 0 000 .708l3 3a.5.5 0 00.708 0z"
+                clip-rule="evenodd"></path>
+        </svg>
+    </div>
+</a>
