Changed the link to the deleted page1.
Eco system is now the home page.

--- a/src/app/test/page2/page2.component.html
+++ b/src/app/test/page2/page2.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/page1">
+<a routerLink="/">
     <div id="left-section" class="col">
         <svg class="bi bi-box-arrow-left" width="3em" height="3em" viewBox="0 0 20 20" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
