--- a/src/app/shared/styles/navigation.scss
+++ b/src/app/shared/styles/navigation.scss
@@ -8,3 +8,21 @@
   transition: 500ms;
   width: 8%;
   z-index: 10;
+
+    &:after {
+      animation: shine-to-right 1s ease-in-out infinite;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -210%;
+      width: 200%;
+      height: 100%;
+      opacity: 0;
+
+      background: rgba(255, 255, 255, 0.13);
+      background: linear-gradient(to right,
+          rgba(255, 255, 255, 0.13) 0%,
+          rgba(255, 255, 255, 0.13) 33%,
+          rgba(255, 255, 255, 0.5) 66%,
+          rgba(255, 255, 255, 0.0) 100%);
+    }
