--- a/src/app/shared/styles/navigation.scss
+++ b/src/app/shared/styles/navigation.scss
@@ -1,3 +1,5 @@
+@import "animations.scss";
+
 %base-navigation-styles {
   align-items: center;
   display: flex;
@@ -8,6 +10,9 @@
   transition: 500ms;
   width: 8%;
   z-index: 10;
+
+  &:hover {
+    background-color: #ffffff6b;
 
     &:after {
       animation: shine-to-right 1s ease-in-out infinite;
@@ -26,3 +31,25 @@
           rgba(255, 255, 255, 0.5) 66%,
           rgba(255, 255, 255, 0.0) 100%);
     }
+
+    fa-icon {
+      opacity: 1;
+    }
+  }
+
+  fa-icon {
+    color: $primary-color;
+    transition: 500ms;
+    opacity: 0.4;
+  }
+}
+
+.navigate-right {
+  @extend %base-navigation-styles;
+  right: 0;
+}
+
+.navigate-left {
+  @extend %base-navigation-styles;
+  left: 0;
+}
