--- a/src/app/modules/pages/eco-system/eco-system.component.html
+++ b/src/app/modules/pages/eco-system/eco-system.component.html
@@ -1,8 +1,12 @@
 <div class="eco-system w-100 vh-100">
-  <img class="w-100 vh-100" src="/assets/images/giphy.gif" alt="GIF placeholder" />
+  <img
+    class="w-100 vh-100"
+    src="/assets/images/giphy.gif"
+    alt="GIF placeholder"
+  />
 </div>
 
-<a routerLink="/page2">
+<a routerLink="/radical-innovation">
   <div class="navigate-right">
     <fa-icon [icon]="faChevronCircleRight" class="fa-5x"></fa-icon>
   </div>
