Transferred to my personal pc to continue

--- a/src/app/modules/pages/eco-system/eco-system.component.html
+++ b/src/app/modules/pages/eco-system/eco-system.component.html
@@ -1,10 +1,10 @@
 <div class="eco-system w-100 vh-100">
-  <img
+  <!-- <img
     class="w-100 vh-100"
     src="/assets/images/giphy.gif"
     alt="GIF placeholder"
   />
-</div>
+</div> -->
 
 <a routerLink="/radical-innovation">
   <div class="navigate-right">
