--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-
-<!-- <main [@routeAnimations]="prepareRoute(outlet)">
+<main [@routeAnimations]="prepareRoute(outlet)">
   <router-outlet #outlet="outlet"></router-outlet>
-</main> -->
-<app-modal></app-modal>
+</main>
